# ai-invention-a5d3bf-the-welfare-state-as-a-recovery-rate-gov

./: README.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_panel.py  data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  data_loader.py  estimators.py  full_method_out.json  method.py  method_out_detailed.json  mini_method_out.json  preview_method_out.json  pyproject.toml  step0_montecarlo.py  step1_recovery_rates.py  step2_csd_anticipation.py  step3_rate_regression.py  step4_hazard.py  utils.py
