[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen-art-dataset-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "et_xmlfile==2.0.0",
    "idna==3.18",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "pycountry==26.2.16",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "six==1.17.0",
    "urllib3==2.7.0",
]
